@@ -1,24 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST django-pipeline-1.2.6.tar.gz 27135 RMD160 9362617e5a430cf527dda5b254767d93f7d4d36b SHA1 7c38ba808bcde8d94d841c8c6ea50453541f3a7b SHA256 8de30a83ff1a1ea2683713580aae8be4ecc5bd1a4a22da6296115caaff67c60f
+DIST django-pipeline-1.2.9.tar.gz 31805 RMD160 daa6b806b726900695fdf6e2e20797b1899333ee SHA1 3a08d820e656fe9f9b91a73c1f35b9653e297e1b SHA256 2838b7fb359112121d4fcb06c96ab5e1de8d9abbb578016747dc0c6c2cf0ae8a
 EBUILD django-pipeline-1.2.6.ebuild 1540 RMD160 122d6e27c954bc0d4a66ff512d3de74fcd812e70 SHA1 32c8d2f2141657f5067a54bd5457dfa2f5585f51 SHA256 bea0d13fb8728a1c7bc884eb3543c0856568c99bce3450d8fe097388c7430053
-MISC ChangeLog 553 RMD160 e30a33ae1272da516591de2c961e4a03f3e5e9e1 SHA1 51002497e9ec7dee22107badd96c6d85baad6e5b SHA256 e7681fb3166cbafc07d4b615f271fc0382d2692b16c2b2345c92c1fd3c2b4f16
+EBUILD django-pipeline-1.2.9.ebuild 1568 RMD160 c5ba35c76c14dbae106b27dff2a4fa7ca01d375c SHA1 8d83e5637d13b0f4bea99237af893f4e6e8e86a7 SHA256 d75209b89b3cf5da369051863ea1059e42a612756d58ec6b0c75d8ff2c9bea7f
+MISC ChangeLog 714 RMD160 ed259cbbf060fb4b4f26790d1431e84fd4a3dd5e SHA1 09bfec1740c6db73658b20f2696df8f1200f1347 SHA256 13a59d3d52dfdc7d21b1f8f6ca39649269cd9c3e37d5fbf2cd40535700a3adc7
 MISC metadata.xml 343 RMD160 0dbcce675a47f093ef87415c88735119c99450b2 SHA1 b3aada3760dd4099df90e43529ba11516842f8b4 SHA256 4556890aeff861bedba80356347200299548c1307acb96ae53a1af51ba1fe553
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJPxMPJAAoJEF0huFKJUZL55q4P/jnkRJCg4fXU+q74HphNH9PR
-wqygFmMqpG5ATUfWKah6lB3RjbVB0c30jE8uzpPundhcQy38NOgI5SyslB8swhdb
-um+OriLJddXAkzWTYuBy1k7L8HK424NPkpg1RpgExiq/nvlzoHSxbTQRFfWg/KF5
-9q8Jij8/YUcGpU/1Obe2xK/4aWZ2RGwsaYPkUFHXfujiv7Nrt6t5igA2ghrfV+Sf
-tuJ49+7sIbekoqiuOB4qxq/sX5Ze9S8ohKJ/TmQuf/nZ+DXuEIfUk0dBWuHQZpwm
-dm6kg6JXA734MvnqZo9FdSTusGckkdmrojd311eDNYdfw45TO6I7cX+zhguJ54Iy
-AeyHpOBx/FnPzNB2z/RPx4Np3jjgKZVvOqClHRVkoN+pEJwpTU1Lk3QibcY0hS3D
-Tx/fFSldhlr29x5x1hMh5s7tCERImlRVGNX/KdSlkGNv5PIrQVHomKxAgT0FjoFd
-WRrBaSjr22693Eh19TVm5mG3Cmrcv9JyfYndlaDXr7a7HLkjHKCn8e48DtavN6wa
-RvthyGJUqJmXriCJhwURUc3ZotJ61ooYhrZhBitFzeJKU3jjJ3ruGujfr+d/VPpG
-HwAO2U85L5EJ69iT2MhHXy0zn4y14M6jmCFKhCS26TIj41UCR8kzPcBkttR0TAxy
-MbM3ChkvI60R2nMeNqa2
-=3WDz
+iEYEARECAAYFAk/q3xAACgkQjDdoMVfcAHgRJwCfdnkL6mIkaVd2NZE7yuGkTiVp
+y4AAniXJL8tugZO1ztH5YjUln/uOJSgr
+=Jebi
 -----END PGP SIGNATURE-----
